--- a/main.css
+++ b/main.css
@@ -1,15 +1,11 @@
-/*
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
-*/
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap');*/
 
 
 
 html {
   color: white;
-  font-family: 'M PLUS Rounded 1c', sans-serif;;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
 
   -webkit-user-select: none;
   -moz-user-select: none;
